# PhotoManager

./: CMakeLists.txt  README
include/: DirHandler.h
src/: DirHandler.cpp  Launcher.cpp
